src/main/metadata/objects/QC__c.object
<CustomObject>
    <fields>
        <fullName>PJ__c</fullName>
        <!--<inlineHelpText>1.Make customers feel uncomfortable is not used in the call (such as to contradict/questioning/denial) terminology such as&quot;Hey, huh?!I do not know,You have to do,There is no way,It is not possible to&quot;and so on；
2.Cannot use rhetorical questions, questioning language, name-calling, sarcastic customer;
3.Cannot chat with customers.</inlineHelpText>-->
        <label>Perception - JinYongYu</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPD__c</fullName>
        <!--<inlineHelpText>Incoming call:
1.Exhibiting a high degree of patience, not impatient in tone, speed was not inappropriate to accelerate;
2.Do not feel free to interrupt the customer, not in a hurry to hang up the phone;
3.Some non-important issues without losing sight of customer;
4.Don't address the issues that follow, complicated operation and not dodge words in the question.
Breathe out,SSI:
1.Exhibiting a high degree of patience, not impatient in tone, speed was not inappropriate to accelerate;
2.Do not feel free to interrupt the customer, not in a hurry to hang up the phone;
3.Some non-important issues without losing sight of customer, positive response to the customer;</inlineHelpText>-->
        <label>Perception - Patience Degree</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PPIS_Comments__c</fullName>
        <label>Proper Pronunciation Intonation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PPIS_DeductedReason__c</fullName>
        <inlineHelpText>1. Pronunciation and Intonation
2. Speed (fast)</inlineHelpText>
        <label>Proper Pronunciation Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.Pronunciation and Intonation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Speed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PPIS__c</fullName>
        <inlineHelpText>1.Standard Mandarin, not with a grave accent;
2.Rising tone and Cadence changes;
3.Speed matching the mood and needs of customers.</inlineHelpText>
        <label>Proper Pronunciation&amp;Intonation&amp;Speed</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PS_Comment_c__c</fullName>
        <label>Perception - Satisfaction Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS__c</fullName>
        <inlineHelpText>Transfer the exact satisfaction.</inlineHelpText>
        <label>Perception - Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PTRS_Comments__c</fullName>
        <label>Provide The Right Solution Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PTRS_DeductedReason__c</fullName>
        <inlineHelpText>1. Provide the correct product information.
2. Provide correct information on the activities
3. Providing the right solutions
4. Call Center knowledge provided but not provided, within the context of information/programme
5. Other</inlineHelpText>
        <label>Provide The Right Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Customer Service Center...</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProperPronunciation__c</fullName>
        <inlineHelpText>1.Calls from beginning to end, voice tone of sweet, enthusiasm, contagious
2. Speed keep calls from beginning to end, speed matching customer emotions
3. When the check information, tips, critical information, due to slow</inlineHelpText>
        <label>Proper Pronunciation, Intonation, Speed</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProvideTheRightSolution__c</fullName>
        <inlineHelpText>1. provide the correct product smart information/solutions
(Product knowledge, involved in the above activities and solutions is included in the FAQ, knowledgebase, or training)</inlineHelpText>
        <label>Provide The Right Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q0_Comments__c</fullName>
        <label>Clarify&amp;Confirm Customer Requir Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q10_Comments__c</fullName>
        <label>Specification - Polite Language Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q11_Comments__c</fullName>
        <label>Specification - Spoken Language Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Criteria__c</fullName>
        <defaultValue>$Label.QC_Completeness_Criteria</defaultValue>
        <label>Q1 Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QC_Overall_Comment__c</fullName>
        <label>QC Overall Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <description>If all the Fatal score equal to &apos;High&apos;or &apos;Medium&apos; ， system will update Qualified to be &apos;Pass&apos;.
Otherwise system will update Qualified to be &apos;Fail&apos;.
Fatal score refers to &apos;SSI Quality standards and algorithms 2&apos;.</description>
        <label>Qualified</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R_Communicate_Ability_Initiative_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(CAI__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communicate Ability - Initiative P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Communicate_Ability_Initiative_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(CAI__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communicate Ability - Initiative P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Communicate_Ability_Listening_A_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(CALA__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communicate Ability - Listening A P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Communicate_Ability_Listening_A_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(CALA__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communicate Ability - Listening A P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Communicate_Ability_Rapid_Resp_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(CARR__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <label>Communicate Ability - Rapid Resp P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Communicate_Ability_Rapid_Resp_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(CARR__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communicate Ability - Rapid Resp P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Correctly_Interpret_The_Q_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(CITQ__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correctly Interpret The Q. P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Correctly_Interpret_The_Q_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(CITQ__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correctly Interpret The Q. P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Crit_Error_Amt_IB__c</fullName>
        <formula>if (ISPICKVAL( DA__c , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL( FTOP__c , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(   CCCR__c  , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(    PACI__c , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(  CCI__c , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(  PFOCF__c , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL( PPD__c   , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(  PJ__c , &apos;Fail&apos;)  ==TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Critical Error Amount IB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Crit_Error_Amt_OB__c</fullName>
        <formula>if (ISPICKVAL( PACI__c , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL( DA__c , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(  FTOP__c  , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(  PFOCF__c , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL( PPD__c   , &apos;Fail&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(  PJ__c , &apos;Fail&apos;)  ==TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Critical Error Amount OB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Critical_Error_Amount_SSI__c</fullName>
        <formula>if (ISPICKVAL( DA__c , &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL( FTOP__c , &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL( FQL__c  , &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(  PFOCF__c , &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL( PPD__c   , &apos;Low&apos;)  ==TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Critical Error Amount SSI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_DocumentAccuracyNO__c</fullName>
        <formula>if(ISPICKVAL( DA__c , &apos;Pass&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Accuracy Pass</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Document_Accuracy_FP_S2__c</fullName>
        <formula>IF(ISPICKVAL(DA__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Accuracy F/P S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Document_Accuracy_F_P_S1__c</fullName>
        <formula>IF(ISPICKVAL(DA__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Accuracy F/P S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Document_Accuracy_Pass_SSI__c</fullName>
        <formula>if(ISPICKVAL( DA__c , &apos;Low&apos;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Accuracy Pass SSI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Familiar_Central_smart_Knowledge_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(FMSK__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Familiar Central/smart/ Knowledge P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Familiar_Central_smart_Knowledge_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(FMSK__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Familiar Central/smart/ Knowledge P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Follow_The_Operation_Process_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(FTOP__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow The Operation Process P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Follow_The_Operation_Process_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(FTOP__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow The Operation Process P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Following_Questionnaire_Logic_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(FQL__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Following Questionnaire Logic P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Following_Questionnaire_Logic_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(FQL__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Following Questionnaire Logic P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Has_CSR_Name__c</fullName>
        <formula>if(CSR_Name__c &lt;&gt;&apos;&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has CSR Name</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Non_Critical_Error_Amount_SSI__c</fullName>
        <formula>if (ISPICKVAL( PACI__c, &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(CITQ__c , &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(FMSK__c   , &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(  SO__c  , &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(PPIS__c  , &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL( SPL__c , &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL( SSL__c, &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(SC__c  , &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(CALA__c, &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(CAI__c, &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(CARR__c, &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(PJ__c, &apos;Low&apos;)  ==TRUE,1,0)+
if (ISPICKVAL(PS__c, &apos;Low&apos;)  ==TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Critical Error Amount SSI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Perception_Focus_On_Customer_F_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(PFOCF__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perception - Focus On Customer F P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Perception_Focus_On_Customer_F_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(PFOCF__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perception - Focus On Customer F P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Perception_Hang_Up_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(PHU__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perception - Hang Up P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Perception_Hang_Up_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(PS__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perception - Hang Up P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Perception_JinYongYu_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(PJ__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perception - JinYongYu P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Perception_JinYongYu_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(PJ__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perception - JinYongYu P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Perception_Patience_Degree_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(PPD__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perception - Patience Degree P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Perception_Patience_Degree_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(PPD__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perception - Patience Degree P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Proper_Pronunciation_Intonation_S_P_S1__c</fullName>
        <formula>IF(ISPICKVAL(PPIS__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proper Pronunciation&amp;Intonation&amp;S P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Proper_Pronunciation_Intonation_S_P_S2__c</fullName>
        <formula>IF(ISPICKVAL(PPIS__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proper Pronunciation&amp;Intonation&amp;S P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Provide_Accurate_Complete_Info_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(PACI__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provide Accurate&amp;Complete Info P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Provide_Accurate_Complete_Info_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(PACI__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provide Accurate&amp;Complete Info P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Specification_Polite_Language_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(SPL__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specification - Polite Language P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Specification_Polite_Language_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(SPL__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specification - Polite Language P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Specification_Spoken_Language_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(SSL__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <label>Specification - Spoken Language P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Specification_Spoken_Language_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(SSL__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specification - Spoken Language P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Standard_Conclusion_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(SC__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Conclusion P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Standard_Conclusion_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(SC__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Conclusion P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Standard_Opening_P_F_S1__c</fullName>
        <formula>IF(ISPICKVAL(SO__c, &quot;High&quot;),&apos;Pass&apos;,&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Opening P/F S1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_Standard_Opening_P_F_S2__c</fullName>
        <formula>IF(ISPICKVAL(SO__c, &quot;Low&quot;),&apos;Fail&apos;,&apos;Pass&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Opening P/F S2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_combineFieldsTest__c</fullName>
        <defaultValue>$Profile.CreatedById&amp; $Profile.CreatedById</defaultValue>
        <description>combineFieldsTest</description>
        <label>R_combineFieldsTest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_non_Crit_Error_Amt_IB__c</fullName>
        <formula>if (ISPICKVAL(  FMSK__c , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL(  Responsibility__c  , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL(  SO__c , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL( PPIS__c   , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL( SPL__c  , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL( SSL__c  , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL( SC__c  , &apos;Fail&apos;) ==TRUE,1,0)+
if (ISPICKVAL( CALA__c  , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL(  CAI__c , &apos;Fail&apos;) ==TRUE,1,0)+
if (ISPICKVAL( CARR__c  , &apos;Fail&apos;) ==TRUE,1,0)+
if (ISPICKVAL( PS__c  , &apos;Fail&apos;) ==TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Critical Error Amount IB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_non_Crit_Error_Amt_OB__c</fullName>
        <formula>if (ISPICKVAL(  CITQ__c , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL(   FMSK__c , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL(   FQL__c  , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL( SO__c  , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL( PPIS__c  , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL( SPL__c  , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL( SSL__c  , &apos;Fail&apos;) ==TRUE,1,0)+
if (ISPICKVAL( SC__c  , &apos;Fail&apos;) ==TRUE,1,0)+ 
if (ISPICKVAL(  CALA__c , &apos;Fail&apos;) ==TRUE,1,0)+
if (ISPICKVAL( CAI__c  , &apos;Fail&apos;) ==TRUE,1,0)+
if (ISPICKVAL( CARR__c  , &apos;Fail&apos;) ==TRUE,1,0)+
if (ISPICKVAL( PHU__c  , &apos;Fail&apos;) ==TRUE,1,0)+
if (ISPICKVAL( PS__c  , &apos;Fail&apos;) ==TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non Critical Error Amount OB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <!--<inlineHelpText>Incoming call:
1.  For issues beyond the scope of reasoning skills, and duplicate acknowledgments, active record and follow-up;
2.  Proactive and positive activities and product information;
3.  Initiative to clarify new words, vocabulary, spelling, such as customer name, non-common.
Breathe out:
1.  Item-by-item with your customer information, such as customer information, vehicle information such as;
2.  Initiative to clarify new words, vocabulary, spelling, such as customer name, non-common.</inlineHelpText>-->
        <label>Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SC__c</fullName>
        <inlineHelpText>1.Using the standard closing, said good Freudian;
2.Speed is moderate, does not appear impatient or speaking too fast to express lack of clarity in the situation.</inlineHelpText>
        <label>Standard Conclusion</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SK_DeductedReason__c</fullName>
        <inlineHelpText>1. Language expression
2. Ability to listen</inlineHelpText>
        <label>Soft Skill Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.Language Expression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Listening Skill</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SL_Comments__c</fullName>
        <label>Specification Language Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SL_DeductedReason__c</fullName>
        <inlineHelpText>1. Be polite
2. Prohibition of service language
3. Spoken language</inlineHelpText>
        <label>Specification Language Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.Polite Words</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Forbidden Words</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Colloquial</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SO__c</fullName>
        <inlineHelpText>1.Using a standard prologue, says do not leak or to the wrong
2.Speed is moderate, articulate;
3.Started by show, including willingness to serve language and take the initiative to ask the customer name.</inlineHelpText>
        <label>Standard Opening</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPL__c</fullName>
        <!--<inlineHelpText>Incoming call:
1.Using the rules of courtesy and follow up calls that consistent;
2.Apologized and expressed its gratitude to the customer after the customer wait;
3.On the phone after learning of the customer last name moderate call customer last name;
4.Due apologies, require customers to repeat;
Breathe out, SSI:
1.Using the rules of courtesy and follow up calls that consistent;
2.Apologized and expressed its gratitude to the customer after the customer wait;
3.In call moderate last name honorific customers more than 2 times (2 times);
4.Need restatement of customers on proper apology</inlineHelpText>-->
        <label>Specification - Polite Language</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSIVehicleModel__c</fullName>
        <formula>SSI__r.VehicleModel__c</formula>
        <label>SSIVehicleModel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup related SSI record</description>
        <label>SSI</label>
        <referenceTo>SSI__c</referenceTo>
        <relationshipLabel>QC</relationshipLabel>
        <relationshipName>QC</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>